[gd_scene load_steps=24 format=3 uid="uid://cste8v1g53q7o"]

[ext_resource type="Script" path="res://WelcomeScreen.gd" id="1_oh8bs"]
[ext_resource type="Shader" path="res://Shaders/sokpop.gdshader" id="2_xqk6b"]
[ext_resource type="Texture2D" uid="uid://dubvh5jsaaofj" path="res://Shaders/normal.jpg" id="3_a03qf"]
[ext_resource type="Texture2D" uid="uid://dmimbk3c0ssmm" path="res://Assets/UI/welcome_screen_background.png" id="4_xe34d"]
[ext_resource type="Texture2D" uid="uid://c6w40neg1saji" path="res://Assets/UI/welcome_screen_button/continue_focus.png" id="8_6x402"]
[ext_resource type="Texture2D" uid="uid://c1jaoxcqqifer" path="res://Assets/UI/welcome_screen_button/continue.png" id="8_x4bar"]
[ext_resource type="Texture2D" uid="uid://cj0o1mjriuli1" path="res://Assets/UI/welcome_screen_button/continue_click.png" id="9_1gwyl"]
[ext_resource type="Texture2D" uid="uid://dtnoufu3om06t" path="res://Assets/UI/welcome_screen_button/quit.png" id="9_qhiyh"]
[ext_resource type="Texture2D" uid="uid://dllf2l4ll7i7n" path="res://Assets/UI/welcome_screen_button/quit_click.png" id="10_3lq7y"]
[ext_resource type="Texture2D" uid="uid://dp3fpk8i2mnhg" path="res://Assets/UI/welcome_screen_button/continue_hover.png" id="10_j4a1v"]
[ext_resource type="FontFile" uid="uid://da8dsj4hcjptk" path="res://Assets/SuperMilk-nRq9Y.ttf" id="10_wuc1f"]
[ext_resource type="Texture2D" uid="uid://c2bxlu02lxmhj" path="res://Assets/UI/welcome_screen_button/settings.png" id="11_yt0kd"]
[ext_resource type="Texture2D" uid="uid://ndsaj1uf6kto" path="res://Assets/UI/welcome_screen_button/settings_click.png" id="12_p1tj2"]
[ext_resource type="Texture2D" uid="uid://mwqj33u3dxkg" path="res://Assets/UI/welcome_screen_button/settings_hover.png" id="13_vdf0w"]
[ext_resource type="Texture2D" uid="uid://dk2rgobpni1h7" path="res://Assets/UI/welcome_screen_button/settings_focus.png" id="14_5hf7w"]
[ext_resource type="PackedScene" uid="uid://ccbpp75ye3ttb" path="res://GameElements/transition_layer.tscn" id="15_nwpt0"]
[ext_resource type="Texture2D" uid="uid://c11u56rufsapq" path="res://Assets/UI/welcome_screen_button/quit_hover.png" id="16_rpfy4"]
[ext_resource type="Script" path="res://GameElements/Screens/BackgroundAudioPlayer.gd" id="17_eywxx"]
[ext_resource type="Texture2D" uid="uid://p1ioaxypyod0" path="res://Assets/UI/welcome_screen_button/quit_focus.png" id="18_nvgpu"]
[ext_resource type="AudioStream" uid="uid://dg5wnsksauopl" path="res://Assets/audio/Patreon Challenge - 06.ogg" id="18_t63y0"]
[ext_resource type="PackedScene" uid="uid://dfk2ty751jcp5" path="res://GameElements/Screens/options_menu.tscn" id="18_uk2s8"]
[ext_resource type="AudioStream" uid="uid://dmx1hkywmtllv" path="res://Assets/audio/click_001.ogg" id="19_26kxm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_obnlc"]
shader = ExtResource("2_xqk6b")
shader_parameter/strength = 0.004
shader_parameter/speed = 6.0
shader_parameter/frames = 10
shader_parameter/flowMap = ExtResource("3_a03qf")

[node name="WelcomeScreen" type="Node2D"]
script = ExtResource("1_oh8bs")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_obnlc")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_xe34d")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -186.0
offset_right = 197.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="ContinueButton" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_bottom = NodePath("../SettingsButton")
texture_normal = ExtResource("8_x4bar")
texture_pressed = ExtResource("9_1gwyl")
texture_hover = ExtResource("10_j4a1v")
texture_focused = ExtResource("8_6x402")
stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/ContinueButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/ContinueButton/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_wuc1f")
theme_override_font_sizes/font_size = 36
text = "Continue"

[node name="SettingsButton" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../ContinueButton")
focus_neighbor_bottom = NodePath("../QuitButton")
texture_normal = ExtResource("11_yt0kd")
texture_pressed = ExtResource("12_p1tj2")
texture_hover = ExtResource("13_vdf0w")
texture_focused = ExtResource("14_5hf7w")
stretch_mode = 0

[node name="QuitButton" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../SettingsButton")
texture_normal = ExtResource("9_qhiyh")
texture_pressed = ExtResource("10_3lq7y")
texture_hover = ExtResource("16_rpfy4")
texture_focused = ExtResource("18_nvgpu")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "v.0.0.5.17"

[node name="TransitionLayer" parent="." instance=ExtResource("15_nwpt0")]
unique_name_in_owner = true

[node name="BackgroundAudioPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
stream = ExtResource("18_t63y0")
volume_db = -10.0
autoplay = true
bus = &"Music"
script = ExtResource("17_eywxx")

[node name="OptionsMenu" parent="." instance=ExtResource("18_uk2s8")]
unique_name_in_owner = true
process_mode = 3
layer = 2
is_on_welcome_screen = true

[node name="ClickPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("19_26kxm")
bus = &"SFX"

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="transition_is_finished" from="TransitionLayer" to="." method="_on_transition_layer_transition_is_finished"]
[connection signal="finished" from="BackgroundAudioPlayer" to="BackgroundAudioPlayer" method="_on_finished"]
